--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,2 @@
-<div class="container">
-  <h1>Create Books</h1>
-  <div class="book-container">
-    <div class="book-form">
-      <form #form="ngForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="">Title</label>
-          <input type="text" name="bookName" [(ngModel)]="book.BookTitle">
-        </div>
-        <div class="form-group">
-          <label for="">category</label>
-          <input type="text" name="category" [(ngModel)]="book.Category">
-        </div>
-        <div>
-          <label for="">Price</label>
-          <input type="text" name="price" [(ngModel)]="book.Price">
-        </div>
-        <div>
-          <label for="">Publisher</label>
-          <input type="text" name="publisher" [(ngModel)]="book.Publisher">
-        </div>
-        <div>
-          <label for="">Active</label>
-          <input type="text" name="Active" [(ngModel)]="book.Active">
-        </div>
-        <div>
-          <label for="">Content</label>
-          <input type="text" name="Content" [(ngModel)]="book.Content">
-        </div>
-        <div class="form-group">
-          <button>Save</button>
-        </div>
-      </form>
-    </div>
-    <div class="books-grid">
-      <div class="book-row" *ngFor="let book of books">
-        <div class="book-row-details" (click)="populateForm(book)">
-          <span>{{ book.BookTitle }}</span>
-          <span>{{ book.Category }}</span>
-        </div>
-        <div class="book-row-action">
-          <a (click)="deleteBook(book.id)"><i class="fa-solid fa-trash"></i></a>
-        </div>
-      
+
+<app-signin></app-signin>
