--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-
-<app-signin></app-signin>
+<nav>
+    <a routerLink = "Signin" routerLinkActive="active">Signin</a>
+    <a routerLink = "Books" >CreateBooks</a>
+</nav>
+<router-outlet></router-outlet>
