--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
-    <a routerLink = "Signin" routerLinkActive="active">Signin</a>
+    <a routerLink = "Signin" routerLinkActive="active">Login</a>
+    
     <a routerLink = "Books" >CreateBooks</a>
 </nav>
 <router-outlet></router-outlet>
