--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav>
     <a routerLink = "Signin" routerLinkActive="active">Login</a>
-    
-    <a routerLink = "Books" >CreateBooks</a>
+    <a routerLink =  "Signup">Signup</a>
+    <a routerLink = "Books">CreateBooks</a>
 </nav>
 <router-outlet></router-outlet>
