--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nav>
+    <h1>DigitalBooksApplication</h1>
     <a routerLink = "Signin" routerLinkActive="active">Login</a>
     <a routerLink =  "Signup">Signup</a>
     <a routerLink = "Books">CreateBooks</a>
