--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -15,6 +15,10 @@
             <label for="">category</label>
             <input type="text" name="category" [(ngModel)]="book.Category">
           </div>
+          <div class="form-group">
+            <label for="">UserId</label>
+            <input type="text" name="UserId" [(ngModel)]="book.UserId">
+          </div>
           <div>
             <label for="">Price</label>
             <input type="text" name="price" [(ngModel)]="book.Price">
