--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -29,7 +29,7 @@
           </div>
           <div>
             <label for="">PublishedDate</label>
-            <input type="text" name="publisher" [(ngModel)]="book.PublishedDate">
+            <input type="text" name="PublishedDate" [(ngModel)]="book.PublishedDate">
           </div>
           <div>
             <label for="">Active</label>
