--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -7,7 +7,7 @@
           </div>
           <div class="form-group">
             <label for="">Password</label>
-            <input type="text" name="Password" [(ngModel)]="user.Password">
+            <input type="password" name="Password" [(ngModel)]="user.Password">
           </div>
           <div class="form-group">
             <button>Save</button>
