--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,11 +7,15 @@
           </div>
           <div class="form-group">
             <label for="">Password</label>
-            <input type="text" name="Password" [(ngModel)]="usersignup.Password">
+            <input type="password" name="Password" [(ngModel)]="usersignup.Password">
           </div>
           <div class="form-group">
             <label for="">UserType</label>
             <input type="text" name="UserType" [(ngModel)]="usersignup.UserType">
+          </div>
+          <div class="form-group">
+            <label for="">UserEmail</label>
+            <input type="text" name="UserEmail" [(ngModel)]="usersignup.UserEmail">
           </div>
           <div class="form-group">
             <button>Save</button>
