--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,10 @@
 <body>
     <h1 class ="bg-dark text-success">DigitalBooksApplication</h1>
     <nav>
-        <div class="col-md-4 text-center"> <a routerLink = "Signin" routerLinkActive="active">Login</a></div>
-        <div class="col-md-4 text-center"><a routerLink =  "Signup">Signup</a></div>
-        <div class="col-md-4 text-center"><a routerLink = "Books">CreateBooks</a></div>
+        <a routerLink = "Signin" routerLinkActive="active">Login</a>
+        <a routerLink =  "Signup">Signup</a>
+        <a routerLink = "Books">CreateBooks</a>
+        <a routerLink = "Payment">Payment</a>
     </nav>
 </body>
 <router-outlet></router-outlet>
