--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -10,7 +10,8 @@
             <input type="password" name="Password" [(ngModel)]="user.Password">
           </div>
           <div class="form-group">
-            <button>Save</button>
+            <button (click)='getData()'>Save</button>
+            <p>value received from local storage - {{val}}</p>
           </div>
         </form>
       </div>
