--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<head>
+<!-- <head>
     <style>
         h1 {text-align: center;}
     </style>
@@ -11,5 +11,6 @@
         <a routerLink = "Books">CreateBooks</a>
         <a routerLink = "Payment">Payment</a>
     </nav>
-</body>
-<router-outlet></router-outlet>
+</body>-->
+<app-navbar></app-navbar>
+<router-outlet></router-outlet> 
