--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -44,13 +44,11 @@
           </div>
         </form>
       </div>
-      <div class="books-grid">
+      <!-- <div class="books-grid">
         <div class="book-row" *ngFor="let book of books">
           <div class="book-row-details" (click)="populateForm(book)">
             <span>{{ book.BookTitle }}</span>
             <span>{{ book.Category }}</span>
-          </div>
-          <!-- /*<div class="book-row-action"> -->
-            <!-- <a (click)="deleteBook(book.id)"><i class="fa-solid fa-trash"></i></a> -->
-          <!-- </div>*/ -->
+          </div> -->
+          
         
