--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -10,5 +10,5 @@
             <input type="password" name="Password" [(ngModel)]="payment.PaymentDate">
           </div>
           <div class="form-group">
-            <button (click)=''>Save</button>
+            <button>Save</button>
             </div>
