--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -10,8 +10,7 @@
             <input type="password" name="Password" [(ngModel)]="user.Password">
           </div>
           <div class="form-group">
-            <button (click)='getData()'>Save</button>
-            <p>value received from local storage - {{val}}</p>
+            <a routerLink="/Books" type="button" class="btn btn-primary">Save</a>
           </div>
         </form>
       </div>
