--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/Signup">Signup</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" routerLink="/Payment">Payment</a>
+          </li>
       </ul>
     </div>
   </nav>
