--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -2,12 +2,16 @@
     <h1>Book Payment</h1>
         <form #form="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
-            <label for="">Email</label>
-            <input type="text" name="Email" [(ngModel)]="payment.Email">
+            <label for="">BuyerEmail</label>
+            <input type="text" name="BuyerEmail" [(ngModel)]="payment.BuyerEmail">
           </div>
           <div class="form-group">
-            <label for="">Password</label>
-            <input type="password" name="Password" [(ngModel)]="payment.PaymentDate">
+            <label for="">BuyerName</label>
+            <input type="password" name="BuyerName" [(ngModel)]="payment.BuyerName">
+          </div>
+          <div class="form-group">
+            <label for="">PaymentDate</label>
+            <input type="password" name="PaymentDate" [(ngModel)]="payment.PaymentDate">
           </div>
           <div class="form-group">
             <button>Save</button>
