--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,12 +10,12 @@
             <input type="password" name="Password" [(ngModel)]="usersignup.Password">
           </div>
           <div class="form-group">
-            <label for="">UserType</label>
-            <input type="text" name="UserType" [(ngModel)]="usersignup.UserType">
+            <label for="">UserRole</label>
+            <input type="text" name="UserRole" [(ngModel)]="usersignup.UserRole">
           </div>
           <div class="form-group">
-            <label for="">UserEmail</label>
-            <input type="text" name="UserEmail" [(ngModel)]="usersignup.UserEmail">
+            <label for="">Email</label>
+            <input type="text" name="Email" [(ngModel)]="usersignup.Email">
           </div>
           <div class="form-group">
             <button>Save</button>
