--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item">
             <a class="nav-link" routerLink="/Payment">Payment</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/createbooks">Createbooks</a>
+          </li>
       </ul>
     </div>
   </nav>
