--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/createbooks">Createbooks</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/getpayment">getpayment</a>
+          </li>
       </ul>
     </div>
   </nav>
