--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
             <a class="nav-link" routerLink="/createbooks">Createbooks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/getpayment">getpayment</a>
+            <a class="nav-link" routerLink="/getpayment">Getpayment</a>
           </li>
       </ul>
     </div>
