--- a/src/app/getpayment/getpayment.component.html
+++ b/src/app/getpayment/getpayment.component.html
@@ -16,7 +16,7 @@
                 <td>{{payment.buyerName}}</td>
                 <td>{{payment.bookId}}</td>
                 <td>{{payment.paymentDate}}</td>
-                <td><a  routerLink="/getpayment">Getpayment</a></td>
+                <td><a  routerLink="/getpayment"></a></td>
             </tr>
         </tbody>        
     </table>
