--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -15,13 +14,13 @@
           <a class="nav-link" routerLink="/Signup">Signup</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" routerLink="/Payment">Payment</a>
+            <a class="nav-link" routerLink="/Payment">BuyBook</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/createbooks">Createbooks</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/getpayment">Getpayment</a>
+            <a class="nav-link" routerLink="/getpayment">Invoice</a>
           </li>
       </ul>
     </div>
