--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -28,7 +28,7 @@
                   <td>{{book.category}}</td>
                   <td>{{book.content}}</td>
                   <td>{{book.active}}</td>
-                  <td><a  routerLink="/Books">Books</a></td>
+                  <td><a  routerLink="/Books"></a></td>
               </tr>
           </tbody>        
       </table>
