--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,9 +10,13 @@
             <input type="password" name="Password" [(ngModel)]="usersignup.Password">
           </div>
           <div class="form-group">
-            <label for="">UserRole</label>
-            <input type="text" name="UserRole" [(ngModel)]="usersignup.UserRole">
-          </div>
+          <label for=''>UserRole
+            <input list="Roles" name="UserRole" [(ngModel)]="usersignup.UserRole"></label>
+            <datalist id="Roles">
+              <option value="Author"></option>
+              <option value="Reader"></option>
+            </datalist>
+            </div>
           <div class="form-group">
             <label for="">Email</label>
             <input type="text" name="Email" [(ngModel)]="usersignup.Email">
