--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>User Signup</h1>
-        <form #form="ngForm" (ngSubmit)="onSubmit()">
+        <form #form="ngForm">
           <div class="form-group">
             <label for="">UserName</label>
             <input type="text" name="UserName" [(ngModel)]="usersignup.UserName">
@@ -22,7 +22,7 @@
             <input type="text" name="Email" [(ngModel)]="usersignup.Email">
           </div>
           <div class="form-group">
-            <button>Save</button>
+            <a  (click)="onSubmit()" type="button" class="btn btn-primary">SignUp</a>
           </div>
         </form>
       </div>
