--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/getpayment">Invoice</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/searchbooks">searchbooks</a>
+          </li>
       </ul>
     </div>
   </nav>
