--- a/src/app/searchbook/searchbook.component.html
+++ b/src/app/searchbook/searchbook.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Search Books</h1>
-        <form #form="ngForm" (ngSubmit)="onSubmit()">
+        <form #form="ngForm">
           <div class="form-group">
             <label for="">Title</label>
             <input type="text" name="Title" [(ngModel)]="book.title">
@@ -16,4 +16,7 @@
           <div class="form-group">
             <label for="">Publisher</label>
             <input type="text" name="Publisher" [(ngModel)]="book.publisher">
+          </div>
+          <div class="form-group">
+            <a  (click)="onSubmit()" type="button" class="btn btn-primary">Books</a>
           </div>
