--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,5 +1,6 @@
+<div class="row pt-3">
 <div class='table-responsive'>
-      <table class='table'>
+    <table class="table table-striped-border">
           <thead>
               <tr>
                   <th>bookId</th>
@@ -32,5 +33,6 @@
               </tr>
           </tbody>        
       </table>
-  
+   
+  </div>
 </div>
