--- a/src/app/searchbook/searchbook.component.html
+++ b/src/app/searchbook/searchbook.component.html
@@ -3,7 +3,7 @@
         <form #form="ngForm">
           <div class="form-group">
             <label for="">Title</label>
-            <input type="text" name="Title" [(ngModel)]="book.title">
+            <input type="text" name="title" [(ngModel)]="book.title">
           </div>
           <div class="form-group">
             <label for="">Category</label>
@@ -11,12 +11,16 @@
           </div>
           <div class="form-group">
             <label for="">AuthorName</label>
-            <input type="text" name="AuthorName" [(ngModel)]="book.authorName">
+            <input type="text" name="authorName" [(ngModel)]="book.authorName">
           </div>
           <div class="form-group">
             <label for="">Publisher</label>
-            <input type="text" name="Publisher" [(ngModel)]="book.publisher">
+            <input type="text" name="publisher" [(ngModel)]="book.publisher">
           </div>
           <div class="form-group">
-            <a  (click)="onSubmit()" type="button" class="btn btn-primary">Books</a>
+            <label for="">Content</label>
+            <input type="text" name="content" [(ngModel)]="book.content">
+          </div>
+          <div class="form-group">
+            <a  (click)="onSubmit()" type="button" class="btn btn-primary">Search</a>
           </div>
