--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -10,8 +10,7 @@
             <input type="password" name="Password" [(ngModel)]="user.Password">
           </div>
           <div class="form-group">
-            <a  (click)="onSubmit()" type="button" class="btn btn-primary">Login</a>
-            {{ErrMsg}}
+            <a  (click)="onSubmit()" type="button" class="btn btn-primary">Save</a>
           </div>
         </form>
       </div>
