--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,29 +1,25 @@
 <div class="container">
     <h1>User Signup</h1>
-        <form #form="ngForm">
-          <div class="form-group">
-            <label for="">UserName</label>
-            <input type="text" name="UserName" [(ngModel)]="usersignup.UserName">
-          </div>
-          <div class="form-group">
-            <label for="">Password</label>
-            <input type="password" name="Password" [(ngModel)]="usersignup.Password">
-          </div>
-          <div class="form-group">
-          <label for=''>UserRole
-            <input list="Roles" name="UserRole" [(ngModel)]="usersignup.UserRole"></label>
-            <datalist id="Roles">
-              <option value="Author"></option>
-              <option value="Reader"></option>
-            </datalist>
-            </div>
-          <div class="form-group">
-            <label for="">Email</label>
-            <input type="text" name="Email" [(ngModel)]="usersignup.Email">
-          </div>
-          <div class="form-group">
-            <a  (click)="onSubmit()" type="button" class="btn btn-primary">SignUp</a>
-          </div>
-        </form>
-      </div>
+
+    <label for="name"><b>UserName</b></label>
+    <input type="text" placeholder="Enter UserName" name="UserName" [(ngModel)]="usersignup.UserName">
+         
+    <label for="password"><b>Password</b></label>
+    <input type="text" placeholder="Enter Password" name="Password" [(ngModel)]="usersignup.Password">
+      
+    <label for="Email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="Email" [(ngModel)]="usersignup.Email">
+
+    <label for="role"><b>UserRole</b></label>
+    <select name="Roles" id="UserRole" [(ngModel)]="usersignup.UserRole">
+      <option value="author">Author</option>
+      <option value="reader">Reader</option>
+    </select>
+         
+    <div class="form-group">
+     <a  (click)="onSubmit()" type="button" class="btn btn-primary">SignUp</a>
+     </div>
+
+        
+</div>
      
