--- a/src/app/getpayment/getpayment.component.html
+++ b/src/app/getpayment/getpayment.component.html
@@ -1,4 +1,6 @@
-<div class='table-responsive'>
+<div class = "container">
+    <div class='table-responsive'>
+    <div class="cards-container">
     <table class='table'>
         <thead>
             <tr>
@@ -20,5 +22,6 @@
             </tr>
         </tbody>        
     </table>
-
+    </div>
+</div>
 </div>
