--- a/src/app/searchbook/searchbook.component.html
+++ b/src/app/searchbook/searchbook.component.html
@@ -1,26 +1,24 @@
 <div class="container">
     <h1>Search Books</h1>
         <form #form="ngForm">
-          <div class="form-group">
+
             <label for="">Title</label>
             <input type="text" name="title" [(ngModel)]="book.title">
-          </div>
-          <div class="form-group">
+          
             <label for="">Category</label>
             <input type="text" name="category" [(ngModel)]="book.category">
-          </div>
-          <div class="form-group">
+        
             <label for="">AuthorName</label>
             <input type="text" name="authorName" [(ngModel)]="book.authorName">
-          </div>
-          <div class="form-group">
+        
             <label for="">Publisher</label>
             <input type="text" name="publisher" [(ngModel)]="book.publisher">
-          </div>
-          <div class="form-group">
+         
             <label for="">Content</label>
             <input type="text" name="content" [(ngModel)]="book.content">
-          </div>
+         
           <div class="form-group">
             <a  (click)="onSubmit()" type="button" class="btn btn-primary">Search</a>
           </div>
+</form>
+</div>
