--- a/src/app/searchbook/searchbook.component.html
+++ b/src/app/searchbook/searchbook.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" >
     <h1>Search Books</h1>
         <form #form="ngForm">
 
@@ -23,17 +23,17 @@
 </form>
 </div>
 
-<div class="row">
+<div class="row" >
   <div class="table-responsive" id="divBook">
       <div class="table-responsive">
           <table class="table table-striped border" >
               <thead>
                   <tr class="table-secondary">
-                      <th>title</th>
-                      <th>category</th>
-                      <th>authorName</th>
+                      <th>Title</th>
+                      <th>Category</th>
+                      <th>AuthorName</th>
                       <th>Publisher</th>
-                      <th>content</th>
+                      <th>Content</th>
                   </tr>
               </thead>
               <tbody>
