--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -14,6 +14,7 @@
                   <th>category</th>
                   <th>content</th>
                   <th>active</th>
+                  <th>Delete</th>
               </tr>
           </thead>    
           <tbody>
@@ -29,6 +30,7 @@
                   <td>{{book.category}}</td>
                   <td>{{book.content}}</td>
                   <td>{{book.active}}</td>
+                  <td><a [routerLink]="['/Deletebooks',book.bookId]" class="btn btn-danger">Delete</a></td>
                   <td><a  routerLink="/Books"></a></td>
               </tr>
           </tbody>        
