--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,4 +1,4 @@
-<div class="row pt-3">
+<div *ngIf = "Showgrid" class="row pt-3">
 <div class='table-responsive'>
     <table class="table table-striped-border">
           <thead>
@@ -39,4 +39,39 @@
       </table>
    
   </div>
+</div>
+
+<div *ngIf = "ShowFields" class="row pt-3">
+
+    <label for="name"><b>Title</b></label>
+            <input type="text" placeholder="Enter Title" name="Title" [(ngModel)]="book.title">
+         
+            <label for="category"><b>Category</b></label>
+            <input type="text" name="category" placeholder="Enter Category" [(ngModel)]="book.category">
+          
+            <label for="price"><b>Price</b></label>
+            <input type="text" name="price" placeholder="Enter Price" [(ngModel)]="book.price">
+          
+            <label for=""><b>AuthorName</b></label>
+            <input type="text" name="authorName" placeholder="Enter authorName" [(ngModel)]="book.authorName">
+         
+         
+            <label for="publisher"><b>Publisher</b></label>
+            <input type="text" name="price" placeholder="Enter Publisher" [(ngModel)]="book.publisher">
+        
+          
+            <label for=""><b>PublishedDate</b></label>
+            <input type="text" name="PublishedDate" [(ngModel)]="book.publishedDate">
+      
+            <label for="content"><b>Content</b></label>
+            <input type="text" name="content" placeholder="Enter Content" [(ngModel)]="book.content">
+       
+            <label for="active"><b>Active</b></label>
+            <input type="text" name="active" [(ngModel)]="book.active">
+        
+          <div class="form-group">
+            <a (click)='updateBook(book)' href='Books'>Save </a> 
+            <!-- <button>Create</button> -->
+          </div> 
+
 </div>
