--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,7 +5,7 @@
     <input type="text" placeholder="Enter UserName" name="UserName" [(ngModel)]="usersignup.UserName">
          
     <label for="password"><b>Password</b></label>
-    <input type="text" placeholder="Enter Password" name="Password" [(ngModel)]="usersignup.Password">
+    <input type="password" placeholder="Enter Password" name="Password" [(ngModel)]="usersignup.Password">
       
     <label for="Email"><b>Email</b></label>
     <input type="text" placeholder="Enter Email" name="Email" [(ngModel)]="usersignup.Email">
