--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,8 +12,8 @@
 
     <label for="role"><b>UserRole</b></label>
     <select name="Roles" id="UserRole" [(ngModel)]="usersignup.UserRole">
-      <option value="author">Author</option>
-      <option value="reader">Reader</option>
+      <option value="Author">Author</option>
+      <option value="Reader">Reader</option>
     </select>
          
     <div class="form-group">
